--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
 </head>
 <body>
     <div class="container">
-        <div class="sidebar"></div>
+        <div class="sidebar">
+            <div class="logo">Dashboard</div>
+            <ul class="nav-links">
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>
+            </ul>
+            <ul class="option=links">
+                <li>Setting</li>
+                <li>Support</li>
+                <li>Privacy</li>
+            </ul>
+        </div>
         <div class="header"></div>
         <div class="main-content"></div>
 
