--- a/index.html
+++ b/index.html
@@ -18,14 +18,35 @@
                 <li>Tasks</li>
                 <li>Communities</li>
             </ul>
-            <ul class="option=links">
+            <ul class="option-links">
                 <li>Setting</li>
                 <li>Support</li>
                 <li>Privacy</li>
             </ul>
         </div>
-        <div class="header"></div>
-        <div class="main-content"></div>
+        <div class="header">
+            <div class="search-area">Serch...</div>
+            <input type="search" id="site-search" name="q" />
+            <div class="user-area">
+                <p>Hi there, Morgan Oakley (@morgan)</p>
+                <div class="action-buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
+        </div>
+        <div class="main-content">
+            <div class="projects">
+                <div class="your-projects">Your Projects</div>
+                <div class="card">Project 1</div>
+                <div class="card">Project 2</div>
+                <div class="card">Project 3</div>
+                <div class="card">Project 4</div>
+                <div class="card">Project 5</div>
+                <div class="card">Project 6</div>
+            </div>
+        </div>
 
     </div>
     
