feat: structure main content with nested grid and fix list styles

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             </div>
         </div>
         <div class="main-content">
-            <div class="projects">
                 <div class="your-projects">Your Projects</div>
                 <div class="card">Project 1</div>
                 <div class="card">Project 2</div>
@@ -45,6 +44,18 @@
                 <div class="card">Project 4</div>
                 <div class="card">Project 5</div>
                 <div class="card">Project 6</div>
+            <div class="projects">
+                <div class="side-panel">
+                    <div class="announcements">Announcements</div>
+                    <div class="announcements">Site Maintence</div>
+                    <div class="announcements">Community Share Day</div>
+                    <div class="announcements">Upload Privacy Policy</div>
+                    <div class="trending">Trending</div>
+                    <div class="trending">@tegan</div>
+                    <div class="trending">@morgan</div>
+                    <div class="trending">@kendall</div>
+                </div>
+
             </div>
         </div>
 
