feat: finalize admin dashboard layout with nested grids and card styling

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="sidebar">
             <div class="logo">Dashboard</div>
             <ul class="nav-links">
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
+                <li>🏠 Home</li>
+                <li>👤 Profile</li>
+                <li>💬 Messages</li>
                 <li>History</li>
                 <li>Tasks</li>
                 <li>Communities</li>
