feat: Add admin dashboard grid layout

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
         </div>
         <div class="header">
-            <div class="search-area">Serch...</div>
+            <div class="search-area">Search...</div>
             <input type="search" id="site-search" name="q" />
             <div class="user-area">
                 <p>Hi there, Morgan Oakley (@morgan)</p>
@@ -37,14 +37,17 @@
             </div>
         </div>
         <div class="main-content">
+            <div class="projects">
                 <div class="your-projects">Your Projects</div>
+                <div class="cards-grid">
                 <div class="card">Project 1</div>
                 <div class="card">Project 2</div>
                 <div class="card">Project 3</div>
                 <div class="card">Project 4</div>
                 <div class="card">Project 5</div>
                 <div class="card">Project 6</div>
-            <div class="projects">
+                </div>
+            </div>
                 <div class="side-panel">
                     <div class="announcements">Announcements</div>
                     <div class="announcements">Site Maintence</div>
@@ -56,7 +59,7 @@
                     <div class="trending">@kendall</div>
                 </div>
 
-            </div>
+            
         </div>
 
     </div>
